// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`delite buttons work 1`] = `
<div
  className="mobile-company"
>
  <div>
    <button
      onClick={[Function]}
    >
      Velcom
    </button>
    <button
      onClick={[Function]}
    >
      MTS
    </button>
    <br />
    Company: 
    <span>
      Velcom
    </span>
  </div>
  <hr />
  <button
    dataTestId="filterAll"
    onClick={[Function]}
  >
    All
  </button>
  <button
    dataTestId="filterActiv"
    onClick={[Function]}
  >
    Active
  </button>
  <button
    dataTestId="filterBlock"
    onClick={[Function]}
  >
    Blocked
  </button>
  <hr />
  <table
    className="clients-table"
  >
    <tbody>
      <tr
        className="table__head"
      >
        <td>
          First Name
        </td>
        <td>
          Last Name
        </td>
        <td>
          Patronymic
        </td>
        <td>
          Balance
        </td>
        <td>
          Status
        </td>
        <td>
          Edit
        </td>
        <td>
          Delite
        </td>
      </tr>
      <tr
        className="client-row"
      >
        <td>
          Иван
        </td>
        <td>
          Иванов
        </td>
        <td>
          Иванович
        </td>
        <td>
          200
        </td>
        <td
          className="active"
        >
          active
        </td>
        <td>
          <button
            dataTestId="edit1"
            onClick={[Function]}
          >
            Edit
          </button>
        </td>
        <td>
          <button
            dataTestId="delite1"
            onClick={[Function]}
          >
            Delite
          </button>
        </td>
      </tr>
      <tr
        className="client-row"
      >
        <td>
          Сидор
        </td>
        <td>
          Сидоров
        </td>
        <td>
          Сидорович
        </td>
        <td>
          250
        </td>
        <td
          className="active"
        >
          active
        </td>
        <td>
          <button
            dataTestId="edit2"
            onClick={[Function]}
          >
            Edit
          </button>
        </td>
        <td>
          <button
            dataTestId="delite2"
            onClick={[Function]}
          >
            Delite
          </button>
        </td>
      </tr>
      <tr
        className="client-row"
      >
        <td>
          Петр
        </td>
        <td>
          Петров
        </td>
        <td>
          Петрович
        </td>
        <td>
          180
        </td>
        <td
          className="active"
        >
          active
        </td>
        <td>
          <button
            dataTestId="edit3"
            onClick={[Function]}
          >
            Edit
          </button>
        </td>
        <td>
          <button
            dataTestId="delite3"
            onClick={[Function]}
          >
            Delite
          </button>
        </td>
      </tr>
      <tr
        className="client-row"
      >
        <td>
          Григорий
        </td>
        <td>
          Григорьев
        </td>
        <td>
          Григорьевич
        </td>
        <td>
          -220
        </td>
        <td
          className="blocked"
        >
          blocked
        </td>
        <td>
          <button
            dataTestId="edit4"
            onClick={[Function]}
          >
            Edit
          </button>
        </td>
        <td>
          <button
            dataTestId="delite4"
            onClick={[Function]}
          >
            Delite
          </button>
        </td>
      </tr>
    </tbody>
  </table>
  <button
    dataTestId="add"
    onClick={[Function]}
  >
    Add client
  </button>
</div>
`;

exports[`delite buttons work 2`] = `
<div
  className="mobile-company"
>
  <div>
    <button
      onClick={[Function]}
    >
      Velcom
    </button>
    <button
      onClick={[Function]}
    >
      MTS
    </button>
    <br />
    Company: 
    <span>
      Velcom
    </span>
  </div>
  <hr />
  <button
    dataTestId="filterAll"
    onClick={[Function]}
  >
    All
  </button>
  <button
    dataTestId="filterActiv"
    onClick={[Function]}
  >
    Active
  </button>
  <button
    dataTestId="filterBlock"
    onClick={[Function]}
  >
    Blocked
  </button>
  <hr />
  <table
    className="clients-table"
  >
    <tbody>
      <tr
        className="table__head"
      >
        <td>
          First Name
        </td>
        <td>
          Last Name
        </td>
        <td>
          Patronymic
        </td>
        <td>
          Balance
        </td>
        <td>
          Status
        </td>
        <td>
          Edit
        </td>
        <td>
          Delite
        </td>
      </tr>
      <tr
        className="client-row"
      >
        <td>
          Сидор
        </td>
        <td>
          Сидоров
        </td>
        <td>
          Сидорович
        </td>
        <td>
          250
        </td>
        <td
          className="active"
        >
          active
        </td>
        <td>
          <button
            dataTestId="edit2"
            onClick={[Function]}
          >
            Edit
          </button>
        </td>
        <td>
          <button
            dataTestId="delite2"
            onClick={[Function]}
          >
            Delite
          </button>
        </td>
      </tr>
      <tr
        className="client-row"
      >
        <td>
          Петр
        </td>
        <td>
          Петров
        </td>
        <td>
          Петрович
        </td>
        <td>
          180
        </td>
        <td
          className="active"
        >
          active
        </td>
        <td>
          <button
            dataTestId="edit3"
            onClick={[Function]}
          >
            Edit
          </button>
        </td>
        <td>
          <button
            dataTestId="delite3"
            onClick={[Function]}
          >
            Delite
          </button>
        </td>
      </tr>
      <tr
        className="client-row"
      >
        <td>
          Григорий
        </td>
        <td>
          Григорьев
        </td>
        <td>
          Григорьевич
        </td>
        <td>
          -220
        </td>
        <td
          className="blocked"
        >
          blocked
        </td>
        <td>
          <button
            dataTestId="edit4"
            onClick={[Function]}
          >
            Edit
          </button>
        </td>
        <td>
          <button
            dataTestId="delite4"
            onClick={[Function]}
          >
            Delite
          </button>
        </td>
      </tr>
    </tbody>
  </table>
  <button
    dataTestId="add"
    onClick={[Function]}
  >
    Add client
  </button>
</div>
`;
